2008-03-28 Gerd Kohlberger <gerdk@svn.gnome.org>

	* mt-timer.c: Add new 'tick' signal. Remove properties.
	* mt-timer.h: Clean up.
	* mt-main.c: Use changed function name.

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* po/POTFILES.in: Remove deleted mt-dbus.c file.

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.glade:
	* data/dwell-click-applet.glade:

	Add more credits to about dialog and update copyright year.
	No doc credits yet - glade doesn't like modifying documenters atm. 

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/pointer-capture-applet.c: Clean up.

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-service.c:
	* src/mt-service.h:
	* src/mousetweaks-service.xml:
	* src/Makefile.am:

	Added new dbus object with introspection.

	* src/mt-main.c:
	* src/mt-main.h:
	* src/mt-common.h:
	* src/dwell-click-applet.c:
	* src/mt-ctw.c:
	* src/mt-ctw.h:

	Use new dbus object and some general code clean up.

2008-03-25 Gerd Kohlberger <gerdk@svn.gnome.org>

	* ChangeLog: Remove pre-gnome changes.

2008-03-25 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Fix typo.
	* data/pointer-capture.glade: Button -> Mouse button
	* data/pointer-capture.schemas.in: Enclose literal values in double quotes.
	* data/mousetweaks.schemas.in: Enclose literal values in double quotes.

	Fixes bug #516191.

2008-03-20 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Add options context description.

2008-03-20 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/Makefile.am: Remove unused PIXDIR.

	* src/dwell-click-applet.c:
	* data/ctw.glade:
	* pixmaps/Makefile.am:

	Rename pixmaps to remove ubuntuism.

2008-03-20 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac:
	* src/Makefile.am:
	* data/Makefile.am:
	
	Clean up build system.
	
	* src/mt-main.c: Remove obsolete session support.
	
	* src/dwell-click-applet.c:
	* src/pointer-capture-applet.c:
	* src/mt-ctw.c:
	* src/mt-main.c:
	
	Use new DATADIR.
