@@ -1,5 +1,9 @@
 2008-03-28 Gerd Kohlberger <gerdk@svn.gnome.org>
 
+	* mt-main.c: Check gconf value types before using them.
+
+2008-03-28 Gerd Kohlberger <gerdk@svn.gnome.org>
+
 	* mt-timer.c: Add new 'tick' signal. Remove properties.
 	* mt-timer.h: Clean up.
 	* mt-main.c: Use changed function name.
